[project]
name = "helloRL"
version = "2.0.1"
description = "A fully modular framework to make Reinforcement Learning quick and easy"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Hart" }]
dependencies = [
    "gymnasium[box2d]>=1.2.3",
    "ipynbname>=2025.8.0.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.2",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helloRL"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
